--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "jest": "^24.1.0",
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.3333"
+  },
+  "dependencies": {
+    "rxjs": "^6.4.0"
   }
 }
